Added real events to calendar.

--- a/get-involved.html
+++ b/get-involved.html
@@ -133,7 +133,7 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">Upcoming Events</h1>
-                    <p>Have a look at some of our upcoming events and lectures below. Come along and get involved!</p>
+                    <p>Have a look at some of our upcoming events below. Come along and get involved!</p>
                 </div>
             </div>
         </div>
@@ -207,13 +207,7 @@
                         <div class="top-info">
                             <span>Monday</span>
                         </div>
-
                         <ul>
-                            <li class="single-event" data-start="09:00" data-end="10:00" data-content="event-image-processing" data-event="event-1">
-                                <a href="#0">
-                                    <em class="event-name">Image Processing Lecture</em>
-                                </a>
-                            </li>
                         </ul>
                     </li>
 
@@ -221,13 +215,7 @@
                         <div class="top-info">
                             <span>Tuesday</span>
                         </div>
-
                         <ul>
-                            <li class="single-event" data-start="13:00" data-end="15:00" data-content="event-computer-graphics" data-event="event-3">
-                                <a href="#0">
-                                    <em class="event-name">Computer Graphics Practical</em>
-                                </a>
-                            </li>
                         </ul>
                     </li>
 
@@ -235,9 +223,18 @@
                         <div class="top-info">
                             <span>Wednesday</span>
                         </div>
-
                         <ul>
-                            <li class="single-event" data-start="17:00" data-end="18:00" data-content="event-vision-reading-group" data-event="event-1">
+                            <li class="single-event" data-start="13:00" data-end="14:00" data-content="event-cmic-talk" data-event="event-1">
+                                <a href="#0">
+                                    <em class="event-name">Mathworks Presentation</em>
+                                </a>
+                            </li>
+                            <li class="single-event" data-start="15:00" data-end="16:00" data-content="event-diffusion-reading-group" data-event="event-1">
+                                <a href="#0">
+                                    <em class="event-name">Diffusion Imaging Reading Group</em>
+                                </a>
+                            </li>
+                            <li class="single-event" data-start="16:00" data-end="17:00" data-content="event-vision-reading-group" data-event="event-2">
                                 <a href="#0">
                                     <em class="event-name">Computer Vision Reading Group</em>
                                 </a>
@@ -249,13 +246,7 @@
                         <div class="top-info">
                             <span>Thursday</span>
                         </div>
-
                         <ul>
-                            <li class="single-event" data-start="09:30" data-end="10:30" data-content="event-abs-circuit" data-event="event-1">
-                                <a href="#0">
-                                    <em class="event-name">Abs Circuit</em>
-                                </a>
-                            </li>
                         </ul>
                     </li>
 
@@ -263,13 +254,7 @@
                         <div class="top-info">
                             <span>Friday</span>
                         </div>
-
                         <ul>
-                            <li class="single-event" data-start="10:00" data-end="11:00" data-content="event-rowing-workout" data-event="event-2">
-                                <a href="#0">
-                                    <em class="event-name">Rowing Workout</em>
-                                </a>
-                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -290,7 +275,7 @@
                     <div class="body-bg"></div>
                 </div>
                 <a href="#0" class="close">Close</a>
-                
+
             </div>
 
             <div class="cover-layer"></div>
