Further information for events.

--- a/event-diffusion-reading-group.html
+++ b/event-diffusion-reading-group.html
@@ -1,3 +1,7 @@
 <div class="event-info">
-	<div>Each week, the diffusion imaging group at <a href="http://www.ucl.ac.uk/medical-image-computing" target="_blank">CMIC</a> meet to discuss a paper. Each week someone in the group takes a turn in presenting their choice and leading an informal discussion of the work.</div>
+	<div>Each week, the diffusion imaging group at
+		<a href="http://www.ucl.ac.uk/medical-image-computing" target="_blank">CMIC</a> meet to discuss a paper. Each week someone in the group takes a turn in presenting their choice and leading an
+		informal discussion of the work.</br>
+		<a href="https://diffusionreadinggroup.wordpress.com/" target="_blank">More Information</a>
+	</div>
 </div>
