--- a/event-vision-reading-group.html
+++ b/event-vision-reading-group.html
@@ -1,3 +1,6 @@
 <div class="event-info">
-	<div>The UCL Computer Vision Reading group meets every Wednesday at 4pm in Room 6.12 MPEB and Room 405 66-72 Gower Street. Each week someone presents a paper / book chapter / topic of interest to them. The group is very informal. All staff, students, research fellows etc. are welcome to join us.</div>
+	<div>The UCL Computer Vision Reading group meets every Wednesday at 4pm in Room 6.12 MPEB and Room 405 66-72 Gower Street. Each
+		week someone presents a paper / book chapter / topic of interest to them. The group is very informal. All staff, students,
+		research fellows etc. are welcome to join us.</br>
+		<a href="http://www0.cs.ucl.ac.uk/staff/D.Worrall/VRG/VRG.html" target="_blank">More Information</a></div>
 </div>
