--- a/get-involved.html
+++ b/get-involved.html
@@ -132,6 +132,33 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
+                    <h1 class="font-bold light-blue-text my-5">Advice for University</h1>
+                    <p>Interested in going to university? Wanting to study Computer Vision and Imaging? We have the right advice
+                        for you! Studying Computer Science at UCL will give you the skills and knowledge you need to succeed
+                        in the industry. During your time here, there will be many opportunities to meet and volunteer at
+                        the research group to further your knowledge. Furthermore, we have a wide selection of modules you
+                        can take to specialise into Computer Vision:</p>
+                    <ul>
+                        <li>
+                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm054_machine_vision/" target="_blank">Machine Vision</a>
+                        </li>
+                        <li>
+                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/comp3072_image_processing/"
+                                target="_blank">Image Processing</a>
+                        </li>
+                        <li>
+                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm072_mathematical_methods_algorithms_and_implementations/"
+                                target="_blank">Mathmatical Methods</a>
+                        </li>
+                        <li>
+                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm077_computational_modelling_for_biomedical_imaging/"
+                                target="_blank">Biomedical Imaging</a>
+                        </li>
+                        <li>
+                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm081_geometry_of_images/"
+                                target="_blank">Geometry of Images</a>
+                        </li>
+                    </ul>
                     <h1 class="font-bold light-blue-text my-5">Upcoming Events</h1>
                     <p>Have a look at some of our upcoming events below. Come along and get involved!</p>
                 </div>
@@ -229,12 +256,12 @@
                                     <em class="event-name">Mathworks Presentation</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-start="15:00" data-end="16:00" data-content="event-diffusion-reading-group" data-event="event-1">
+                            <li class="single-event" data-start="15:00" data-end="16:00" data-content="event-diffusion-reading-group" data-event="event-2">
                                 <a href="#0">
                                     <em class="event-name">Diffusion Imaging Reading Group</em>
                                 </a>
                             </li>
-                            <li class="single-event" data-start="16:00" data-end="17:00" data-content="event-vision-reading-group" data-event="event-2">
+                            <li class="single-event" data-start="16:00" data-end="17:00" data-content="event-vision-reading-group" data-event="event-3">
                                 <a href="#0">
                                     <em class="event-name">Computer Vision Reading Group</em>
                                 </a>
@@ -247,6 +274,11 @@
                             <span>Thursday</span>
                         </div>
                         <ul>
+                            <li class="single-event" data-start="16:00" data-end="17:00" data-content="event-cnt-talk" data-event="event-4">
+                                <a href="#0">
+                                    <em class="event-name">A Talk by David Gadian</em>
+                                </a>
+                            </li>
                         </ul>
                     </li>
 
