More changes to events.

--- a/research.html
+++ b/research.html
@@ -91,7 +91,8 @@
                         and computing a 3-dimensional model of it. This information provided are usually several pictures
                         or a video of the scene. First, 3d sensing techniques on a grid basis would be used to get 3d images
                         of the scene. Then certain algorithms would be used to connect the scenes together and form the 3d
-                        model.</p>
+                        model.
+                    </p>
                     <p>Image-understanding System</p>
                     <p>Image-understanding system, also called as IUS, contains three levels. The first is called the Low Level.
                         It contains primitives like the sides, the shapes and their position. Going on there is the Intermediate
@@ -104,6 +105,10 @@
                     <p>- Overview of each team, what they are working on, major accomplishments</p>
                     <p>- Publications to each team</p>
                     <p>- Twitter page to each team</p>
+                    <div class='col-md-6 text-center'>
+                        <a class="twitter-timeline" data-width="100%" data-height='500px' href="https://twitter.com/RITimagingsci?ref_src=twsrc%5Etfw">Tweets by RITimagingsci</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
                 </div>
             </div>
         </div>
