Added a page about the team.

--- a/get-involved.html
+++ b/get-involved.html
@@ -36,8 +36,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
@@ -50,11 +50,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/impact.html">Impact</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Get Involved</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/get-involved.html">Get Involved</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/team.html">The Team</a>
+                            <a class="nav-link" href="/team.html">Research Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team-29.html">Team 29 Info</a>
                         </li>
                     </ul>
                     <!--
@@ -143,8 +146,7 @@
                             <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm054_machine_vision/" target="_blank">Machine Vision</a>
                         </li>
                         <li>
-                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/comp3072_image_processing/"
-                                target="_blank">Image Processing</a>
+                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/comp3072_image_processing/" target="_blank">Image Processing</a>
                         </li>
                         <li>
                             <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm072_mathematical_methods_algorithms_and_implementations/"
@@ -155,8 +157,7 @@
                                 target="_blank">Biomedical Imaging</a>
                         </li>
                         <li>
-                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm081_geometry_of_images/"
-                                target="_blank">Geometry of Images</a>
+                            <a href="http://www.cs.ucl.ac.uk/current_students/syllabus/undergrad/compm081_geometry_of_images/" target="_blank">Geometry of Images</a>
                         </li>
                     </ul>
                     <h1 class="font-bold light-blue-text my-5">Upcoming Events</h1>
