--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                             <a class="nav-link" href="/get-involved.html">Get Involved</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/team.html">The Team</a>
+                            <a class="nav-link" href="/team.html">Research Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team-29.html">Team 29 Info</a>
                         </li>
                     </ul>
                     <!--
@@ -155,7 +158,8 @@
                     <p>An interesting problem in our research is the sheer amount of data involved. A VGA camera (640x480 pixels)
                         recording at 30 frames per second will provide 27 Mega Bits of information per second. That's 27
                         million bits of information per second, and that isn't even in HD!</p>
-                    <p>Can you guess out how much information a HD video running at 30 frames per second will provide? (1920x1080 pixels)</p>
+                    <p>Can you guess out how much information a HD video running at 30 frames per second will provide? (1920x1080
+                        pixels)</p>
                     <a class="btn btn-indigo btn-lg" onclick="showAnswer()">Reveal the Answer</a>
                     <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
                     <!-- 16:9 aspect ratio -->
