--- a/team-29.html
+++ b/team-29.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>VIS UCL | Research Team</title>
+    <title>VIS UCL | Team 29</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
-    <link href="css/compiled.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -21,11 +20,9 @@
 
     <!-- Start your project here-->
     <header>
-
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
             <div class="container">
-
                 <a class="navbar-brand" href="/index.html">
                     <img class='logo' src='img/ucl-logo-white.png'>
                 </a>
@@ -68,16 +65,16 @@
         </nav>
 
         <!-- Intro Section -->
-        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/img.jpg">
+        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/ucl_portico_building.jpeg">
             <div class="full-bg-img">
                 <div class="container flex-center">
                     <div class="row pt-5 mt-3">
                         <div class="col-md-12 mb-3">
                             <div class="intro-info-content text-center">
-                                <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING
-                                    <span class="indigo-text font-bold">THE TEAM</span>
+                                <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING SCIENCE
+                                    <span class="indigo-text font-bold">TEAM 29</span>
                                 </h1>
-                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Who is in the department?</h5>
+                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Information about our Team</h5>
                             </div>
                         </div>
                     </div>
@@ -89,41 +86,18 @@
 
     <main>
         <div class="container">
-            <section class="section pb-5 card-section">
-                <h2 class="section-heading h1 pt-4">Our amazing team</h2>
-                <!-- <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p> -->
-
-                <div class="row">
-                    <div class="col-lg-4 col-md-12 mb-r team-card">
-                        <div class="card-wrapper">
-                            <div id="card-1" class="card-rotating effect__click">
-                                <div class="face front">
-                                    <div class="card-up red-yellow">
-                                    </div>
-                                    <div class="avatar">
-                                        <img src="img/people/alex.jpg" class="rounded-circle img-responsive" alt="First sample avatar image">
-                                    </div>
-                                    <div class="card-body">
-                                        <h4 class="mt-1">Professor Danny Alexander</h4>
-                                        <p class="font-bold card-title">Professor in Imaging Science</p>
-                                        <hr>
-                                        <h5 class="mt-2 mb-2">Interests</h5>
-                                        <p class='card-interests'>Colour imaging, segmentation and tracking, medical imaging, MRI, tensor image processing,
-                                            audio processing.</p>
-                                        <div class='profile-links'>
-                                            <a class='more-link' href='#'>Profile</a>
-                                            <a class='more-link-2' href='#'>Personal</a>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="row py-5 mt-4">
+                <div class="col-md-12 text-center">
+                    <h1 class="font-bold light-blue-text my-5">About Us</h1>
+                    <p>We are Team 29 for the Computer Science IEP Project 1. We were tasked to create a website to display the <a href="http://vis.cs.ucl.ac.uk/home/" target="_blank">Vision and Imaging</a> research. Our members and roles are:</p>
+                    <ul>
+                        <li><b>Harry Thomas</b> - Home Page, Get Involved Page</li>
+                        <li><b>Yida Zhou</b> - Research Page</li>
+                        <li><b>Nikhil Kunde</b> - Research Team Page, Bootstrap Theme</li>
+                        <li><b>Sadhbha Odufuwa-Bolger</b> - Impacts Page</li>
+                        <li><b>Zhengxian Fan</b> - History Page</li>
+                    </ul>
                 </div>
-
-            </section>
-        </div>
     </main>
     <!-- /Start your project here-->
 
@@ -189,7 +163,6 @@
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/mdb.min.js"></script>
-    <script type="text/javascript" src="js/teamGen.js"></script>
     <script>
         new WOW().init();
     </script>
