--- a/impact.html
+++ b/impact.html
@@ -33,8 +33,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
@@ -44,14 +44,17 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/research.html">The Research</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Impact</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/impact.html">Impact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/get-involved.html">Get Involved</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/team.html">The Team</a>
+                            <a class="nav-link" href="/team.html">Research Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team-29.html">Team 29 Info</a>
                         </li>
                     </ul>
                     <!--
@@ -87,17 +90,31 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <h2>- Automatic Inspection</h2>
-                    <p> Factories are increasingly relying less on man-power and more on robotic and automated systems. With factory robots that can 'see', defect recognition and quality control processes are greatly improved.<p>
-                    <h2>- Artificial Intelligence</h2>
-                    <p>Artifically Intelligent computers can, through machine learning, use visual data received from pictures or videos for example. Different and exciting data can be extracted from a picture or video if we analyse it using Vision and Imaging analysis. This allows more diverse and nuanced applications of AI possible.</p>
-                    <h2>- Image Organisation</h2>
-                    <p>This is automatically categorising photos based on what is in the photo. This, for example, can allow a user to search through a library of photos using keywords; photos including objects or features that relate to that word can be given without any need to manually tag the photo previously.</p>
-                    <h2>- Vehicles and Driving</h2>
-                    <p>'Seeing' cars, planes, drones and amphibius vehicles have many exciting possible uses. Vision in these vehicles can enhance autonomous vehicles, driving safety, navigation, surveillance and miltitary applications, for example, guided missiles).</p>
-                    <h2>- Medical Image Processing</h2>
-                    <p>Image inspection and analysis can help doctors analyse patient images from all kinds of scanning methods such as endoscopy, MRI and ultrasound scans, by identifying and enhancing certain features in an image.</p>
-                    <h2>- Visual Effects</h2>
-                    <p>Visual Effects in film and animation have progressed impressively over the past few decades thanks to the financial backing of the film industry. Vision and Imaging technologies can be used to enhance visual effects in both the filming and editing of a movie.</p>
+                    <p> Factories are increasingly relying less on man-power and more on robotic and automated systems. With
+                        factory robots that can 'see', defect recognition and quality control processes are greatly improved.
+                        <p>
+                            <h2>- Artificial Intelligence</h2>
+                            <p>Artifically Intelligent computers can, through machine learning, use visual data received from
+                                pictures or videos for example. Different and exciting data can be extracted from a picture
+                                or video if we analyse it using Vision and Imaging analysis. This allows more diverse and
+                                nuanced applications of AI possible.</p>
+                            <h2>- Image Organisation</h2>
+                            <p>This is automatically categorising photos based on what is in the photo. This, for example, can
+                                allow a user to search through a library of photos using keywords; photos including objects
+                                or features that relate to that word can be given without any need to manually tag the photo
+                                previously.</p>
+                            <h2>- Vehicles and Driving</h2>
+                            <p>'Seeing' cars, planes, drones and amphibius vehicles have many exciting possible uses. Vision
+                                in these vehicles can enhance autonomous vehicles, driving safety, navigation, surveillance
+                                and miltitary applications, for example, guided missiles).</p>
+                            <h2>- Medical Image Processing</h2>
+                            <p>Image inspection and analysis can help doctors analyse patient images from all kinds of scanning
+                                methods such as endoscopy, MRI and ultrasound scans, by identifying and enhancing certain
+                                features in an image.</p>
+                            <h2>- Visual Effects</h2>
+                            <p>Visual Effects in film and animation have progressed impressively over the past few decades thanks
+                                to the financial backing of the film industry. Vision and Imaging technologies can be used
+                                to enhance visual effects in both the filming and editing of a movie.</p>
                 </div>
             </div>
         </div>
