--- a/research.html
+++ b/research.html
@@ -33,16 +33,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Home
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/history.html">History</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">The Research</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/research.html">The Research</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/impact.html">Impact</a>
@@ -51,7 +51,10 @@
                             <a class="nav-link" href="/get-involved.html">Get Involved</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/team.html">The Team</a>
+                            <a class="nav-link" href="/team.html">Research Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team-29.html">Team 29 Info</a>
                         </li>
                     </ul>
                     <!--
