--- a/team-29.html
+++ b/team-29.html
@@ -32,8 +32,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
@@ -52,8 +52,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/team.html">Research Team</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/team-29.html">Team 29 Info</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Team 29 Info</a>
                         </li>
                     </ul>
                     <!--
