--- a/history.html
+++ b/history.html
@@ -37,13 +37,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/history.html">History</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">History</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/research.html">The Research</a>
