--- a/impact.html
+++ b/impact.html
@@ -33,8 +33,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
@@ -44,8 +44,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/research.html">The Research</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/impact.html">Impact</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Impact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/get-involved.html">Get Involved</a>
