--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+                        <a class="carosusel-control-next" href="#carousel-example-2" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
