--- a/history.html
+++ b/history.html
@@ -163,7 +163,7 @@
                         also marked the first time statistical learning techniques were used in practice to recognize faces
                         in images. Scientists use geometric approach to achieve face recognition. Toward the end of the 1990s,
                         we saw an increased interaction between the fields of computer graphics and computer vision. This
-                        included image-based rendering, view interpolation, panoramic image stitching</p>
+                        included image-based rendering, view interpolation, panoramic image stitching.</p>
                 </div>
             </div>
         </section>
