change images of research team and team 29 pages, reformatted team 29 page text

--- a/team-29.html
+++ b/team-29.html
@@ -65,7 +65,7 @@
         </nav>
 
         <!-- Intro Section -->
-        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/ucl_portico_building.jpeg">
+        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/team2.jpg">
             <div class="full-bg-img">
                 <div class="container flex-center">
                     <div class="row pt-5 mt-3">
@@ -89,14 +89,30 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">About Us</h1>
-                    <p>We are Team 29 for the Computer Science IEP Project 1. We were tasked to create a website to display the <a href="http://vis.cs.ucl.ac.uk/home/" target="_blank">Vision and Imaging</a> research. Our members and roles are:</p>
-                    <ul>
-                        <li><b>Harry Thomas</b> - Home Page, Get Involved Page</li>
-                        <li><b>Yida Zhou</b> - Research Page</li>
-                        <li><b>Nikhil Kunde</b> - Research Team Page, Bootstrap Theme</li>
-                        <li><b>Sadhbha Odufuwa-Bolger</b> - Impacts Page</li>
-                        <li><b>Zhengxian Fan</b> - History Page</li>
-                    </ul>
+                    <p>We are Team 29 for the Computer Science IEP Project 1 of 2017. We were given the task of creating a website to display the research of UCL's <a href="http://vis.cs.ucl.ac.uk/home/" target="_blank">Vision and Imaging</a> department. Our members and roles are:</p>
+                    <br>
+                    <table class='about-us-table'>
+                        <tr>
+                            <td class="text-right table-names"><b>Zhengxian Fan</b></td>
+                            <td class="text-left">History Page</td>
+                        </tr>
+                        <tr>
+                            <td class="text-right table-names"><b>Nikhil Kunde</b></td>
+                            <td class="text-left">Research Team Page, Bootstrap Theme</td>
+                        </tr>
+                        <tr>
+                            <td class="text-right table-names"><b>Sadhbha Odufuwa-Bolger</b></td>
+                            <td class="text-left">Impacts Page</td>
+                        </tr>
+                        <tr>
+                            <td class="text-right table-names"><b>Harry Thomas</b></td>
+                            <td class="text-left">Home Page, Get Involved Page</td>
+                        </tr>
+                        <tr>
+                            <td class="text-right table-names"><b>Yida Zhou</b></td>
+                            <td class="text-left">Research Page</td>
+                        </tr>
+                    </table>
                 </div>
     </main>
     <!-- /Start your project here-->
