add sending email functionality (commented out atm)

--- a/team.html
+++ b/team.html
@@ -77,7 +77,7 @@
                                 <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING
                                     <span class="indigo-text font-bold">THE TEAM</span>
                                 </h1>
-                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Who is in the department?</h5>
+                                <!-- <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Who is in the department?</h5> -->
                             </div>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
     <main>
         <div class="container">
             <section class="section pb-5 card-section">
-                <h2 class="section-heading h1 pt-4">Our amazing team</h2>
+                <h2 class="section-heading h1 pt-4">Faculty</h2>
                 <!-- <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p> -->
 
                 <div class="row">
