--- a/get-involved.html
+++ b/get-involved.html
@@ -106,8 +106,8 @@
 
                 <div class="md-form">
                     <i class="fa fa-envelope prefix grey-text"></i>
-                    <input type="text" id="form2" class="form-control">
-                    <label for="form2">Your Email</label>
+                    <input type="email" id="form2" class="form-control validate">
+                    <label for="form2" data-error='Invalid'>Your Email</label>
                 </div>
 
                 <div class="md-form">
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="text-center">
-                    <button class="btn btn-unique">Send
+                    <button class="btn btn-unique" id='send-contact-form'>Send
                         <i class="fa fa-paper-plane-o ml-1"></i>
                     </button>
                 </div>
@@ -399,7 +399,9 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMSrRNL62i-xVULG3hCYCItAzZRJFlXXM"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/email.js"></script>
     <script src="js/calendar.js"></script>
     <!-- Resource jQuery -->
     <script>
