home page carousel

--- a/research.html
+++ b/research.html
@@ -111,7 +111,7 @@
                 <!-- Content -->
                 <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                     <div>
-                        <h1 class="card-title pt-2 blue-text"><strong>Scene Reconstruction</strong></h1>
+                        <h1 class="card-title pt-2 blue-text"><strong>3D Scene Reconstruction</strong></h1>
                         <p><h3>The objective of this Scene Reconstruction technology is about taking the information of a scene in reality
                            and computing a 3-dimensional model of it. This information provided are usually several pictures or a video of
                            the scene. First, 3d sensing techniques on a grid basis would be used to get 3d images of the scene. Then certain
@@ -167,6 +167,25 @@
             </div>
         </div>
         <!--/Third slide-->
+        <!--fifth slide-->
+        <div class="carousel-item">
+            <div class="card card-image d-block w-100" style="background-image: url(img/cellPhenotype.jpg); height:600px;" alt="Fifth slide">
+
+                <!-- Content -->
+                <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                    <div>
+                        <h1 class="card-title pt-2 blue-text"><strong>Cell Phenotype Recognition</strong></h1>
+                        <p><h3>The Cell Phenotype Recognition is a type of classifying recognition that UCL focuses in. Its about observing the visible features
+                        called phenotypes from a segment of cells and classifying the cells. The process
+                        picks out features from the database and labells the cells. After that, all needed to do is to
+                        just classify them upon their features. This process sounds simple, but it has to deal with so much data that makes it impossible
+                        for manual operation. That's why we need computers to do it for us.</h3></p>
+                    </div>
+                </div>
+                <!-- Content -->
+            </div>
+        </div>
+        <!--fifth slide-->
         <!--fourth slide-->
         <div class="carousel-item" interval:30000;>
             <div class="card card-image d-block w-100" style="background-image: url(img/image-understandingSystem.png); height:600px;" alt="Fourth slide">
@@ -189,22 +208,6 @@
 
         </div>
         <!--fourth slide-->
-        <!--fifth slide-->
-        <div class="carousel-item">
-            <div class="card card-image d-block w-100" style="background-image: url(img/imageReconstruction.jpeg); height:600px;" alt="Fifth slide">
-
-                <!-- Content -->
-                <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                    <div>
-                        <h1 class="card-title pt-2 blue-text"><strong>Image Reconstruction</strong></h1>
-                        <p><h3>Image restoration is about excluding noises from an image. Better removals are usually obtained by first
-                          determining the basic structure of the image and then controlling the filter.</p>
-                    </div>
-                </div>
-                <!-- Content -->
-            </div>
-        </div>
-        <!--fifth slide-->
     </div>
     <!--/.Slides-->
     <!--Controls-->
@@ -217,6 +220,106 @@
         <span class="sr-only">Next</span>
     </a>
     <!--/.Controls-->
+    <!--Projects section v.3-->
+<section class="section extra-margins">
+
+    <!--Section description-->
+    <p class="section-description"><h3>Researchers of our department of Computer Vision and Imaging Science <br>do lots of studies and are greatly
+      involved in the most advanced researches of
+      many modern technologies that are widely used but still need to be greatly improved. <br>
+      These technologies include:</h3></p>
+
+    <!--Grid row-->
+    <div class="row">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
+
+            <!--Image-->
+            <img src="https://mdbootstrap.com/img/Photos/Others/img (31).jpg" alt="Sample project image" class="img-fluid z-depth-2">
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 pl-lg-5 pb-4">
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Safety</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+        </div>
+        <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+    <hr>
+
+    <!--Grid row-->
+    <div class="row pt-5">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 mb-3">
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-eye fa-lg light-green-text"></i>
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Followers</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-heart-o fa-lg pink-text"></i>
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Entertainment</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+            <!--Third row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-smile-o fa-lg amber-text"></i>
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Communication</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--/Third row-->
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 mb-3">
+
+            <!--Image-->
+            <img src="https://mdbootstrap.com/img/Photos/Others/img (30).jpg" alt="Sample project image" class="img-fluid z-depth-2">
+
+        </div>
+        <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+</section>
+<!--Projects section v.3-->
 </div>
 <!--/.Carousel Wrapper-->
                     <!-- Card -->
@@ -226,6 +329,132 @@
         </div>
     </main>
     <!-- /Start your project here-->
+    <!--Projects section v.3-->
+<section class="section extra-margins">
+
+    <!--Section heading-->
+    <h2 class="section-heading h1 mt-5"><strong>Our best projects</strong></h2>
+    <!--Section description-->
+    <p class="section-description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <!--Grid row-->
+    <div class="row">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
+
+            <!--Image-->
+            <img src="https://mdbootstrap.com/img/Photos/Others/img (31).jpg" alt="Sample project image" class="img-fluid z-depth-2">
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 pl-lg-5 pb-4">
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-bank fa-lg cyan-text"></i>
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Safety</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-code fa-lg red-text"></i>
+                </div>
+                <div class="col-10 ">
+                    <h5 class="feature-title font-bold">Technology</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+            <!--Third row-->
+            <div class="row">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-money fa-lg brown-text"></i>
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Finance</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--/Third row-->
+
+        </div>
+        <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+    <hr>
+
+    <!--Grid row-->
+    <div class="row pt-5">
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-7 mb-3">
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-eye fa-lg light-green-text"></i>
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Followers</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+            <!--Grid row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-heart-o fa-lg pink-text"></i>
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Entertainment</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--Grid row-->
+
+            <!--Third row-->
+            <div class="row mb-3">
+                <div class="col-1 mr-1">
+                    <i class="fa fa-smile-o fa-lg amber-text"></i>
+                </div>
+                <div class="col-10">
+                    <h5 class="feature-title font-bold">Communication</h5>
+                    <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda voluptate velit.</p>
+                </div>
+            </div>
+            <!--/Third row-->
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 mb-3">
+
+            <!--Image-->
+            <img src="https://mdbootstrap.com/img/Photos/Others/img (30).jpg" alt="Sample project image" class="img-fluid z-depth-2">
+
+        </div>
+        <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+</section>
+<!--Projects section v.3-->
 
     <!--Footer-->
     <footer class="page-footer indigo center-on-small-only">
