--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
                                 <div class="view hm-black-light">
-                                    <img style="height:600px;"class="d-block w-100" src="img/meteorite.JPG" alt="First slide">
+                                    <img class="d-block w-100" src="img/meteorite.JPG" alt="First slide">
                                     <div class="mask"></div>
                                 </div>
                                 <div class="carousel-caption">
@@ -120,7 +120,7 @@
                             <div class="carousel-item">
                                 <!--Mask color-->
                                 <div class="view hm-black-light">
-                                    <img style="height:600px;" class="d-block w-100" src="img/srv_feature_points_robotic_instruments.png" alt="Second slide">
+                                    <img class="d-block w-100" src="img/srv_feature_points_robotic_instruments.png" alt="Second slide">
                                     <div class="mask"></div>
                                 </div>
                                 <div class="carousel-caption">
@@ -132,7 +132,7 @@
                             <div class="carousel-item">
                                 <!--Mask color-->
                                 <div class="view hm-black-light">
-                                    <img style="height:600px;" class="d-block w-100" src="img/bifs.JPG" alt="Third slide">
+                                    <img class="d-block w-100" src="img/bifs.JPG" alt="Third slide">
                                     <div class="mask"></div>
                                 </div>
                                 <div class="carousel-caption">
